[package]
name = "v4l-save-image"
version = "0.1.0"
authors = ["FliegendeWurst <2012gdwu@web.de>"]
license = "GPL-3.0+"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
v4l = "0.14.0"
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
chrono = "0.4.11"
